[package]
name = "advent-of-code-2023"
version = "0.1.0"
authors = ["Mattias Buelens <mattias@buelens.com>"]
edition = "2021"
rust-version = "1.74"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
pathfinding = "4.12.0"
num-traits = "0.2.19"
approx = "0.5.1"
rand = "0.8.5"
nohash-hasher = "0.2.0"
